# Pico-LCD-Text-Graph

./: CMakeLists.txt  LCDdriver.h  README.md  ffconf.h  fileselect.c  graphlib.c  graphlib.h  ili9341_spi.c  main.c
